# sitingi

./: README.md  pyproject.toml
dag/: example_dag.py
dags/: meteo_data_pipeline.py
src/: database.db  stremlit_app.py
src/db/: sql_models.py
src/sql/: 1 Neaktyvūs objektai.sql  2 Objektai su naujausia būsena.sql  3 Objektai su galiojančia ir prieš tai buvusia būsena.sql  4 Objektai be galiojančio plano.sql
